--- a/.gitignore
+++ b/.gitignore
@@ -160,7 +160,4 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
-config.py
-Alarms_2023_09_13.xls
-Обработчик.xlsm
-Alarms_2023_09_14.xls
+test.py
