--- a/settings.ini
+++ b/settings.ini
@@ -5,7 +5,27 @@ time3 = 20.0
 
 [Start]
 autostart = False
+tvs = False
 
 [Save Directory]
-save_folder_path = D:/Alarms_ASUTP
+save_folder_path_asutp = D:\Alarms_ASUTP
+save_folder_path_asue = D:\Alarms_ASUE
+save_folder_path_tvs = 
+save_folder_path_asps = D:\Alarms_ASPS
+
+[IPs]
+server_asutp_ip = 200.1.1.1
+server_asue_ip = 200.1.1.16
+server_tvs_ip = 200.1.1.11
+server_asps_ip = 200.1.1.3
+
+[Path]
+path_to_infinityalarms = C:\Program Files\EleSy\SCADA Infinity\InfinityAlarms\InfinityAlarms.exe
+path_to_raw_file = C:\Program Files\EleSy\SCADA Infinity\InfinityAlarms\
+
+[System]
+asutp = True
+asue = False
+tvs = False
+asps = False
 
